Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1532

The type specifications in the generated Erlang code should include "undefined" where it's used as a default value

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      The Erlang code generated by the compiler for, for example, an integer field of a struct sets a default value of 'undefined' but the type to just 'integer()' which doesn't include the default value. This makes Dialyzer complain if the field has not been initialized as it gets set to 'undefined' instead of an integer value.

      Attachments

        1. THRIFT-1532_t_erl_generator.cc.patch
          1 kB
          Björn Bylander
        2. agent.tar.gz
          2 kB
          Björn Bylander

        Activity

          People

            djnym Anthony Molinaro
            loxybjorn Björn Bylander
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 1h
                1h
                Logged:
                Time Spent - Not Specified
                Not Specified