THRIFT-1532 - slightly better fix, take into account requiredness when adding default values

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1303666 13f79535-47bb-0310-9956-ffa450edef68